@@ -1,43 +1,56 @@
 package ru.practicum.shareit.item;
 
+import jakarta.validation.ValidationException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import ru.practicum.shareit.booking.BookingRepository;
+import ru.practicum.shareit.booking.model.Booking;
+import ru.practicum.shareit.booking.model.BookingStatus;
 import ru.practicum.shareit.exception.ForbiddenOperationException;
 import ru.practicum.shareit.exception.NotFoundItemException;
 import ru.practicum.shareit.exception.NotFoundUserException;
+import ru.practicum.shareit.item.dto.CommentCreateDto;
+import ru.practicum.shareit.item.dto.CommentDto;
 import ru.practicum.shareit.item.dto.ItemCreateDto;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemUpdateDto;
+import ru.practicum.shareit.item.mapper.CommentMapper;
+import ru.practicum.shareit.item.mapper.ItemMapper;
+import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.user.User;
-import ru.practicum.shareit.user.UserMapper;
-import ru.practicum.shareit.user.UserRepositoryImpl;
+import ru.practicum.shareit.user.UserRepository;
 
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
-    private final ItemRepositoryImpl itemRepository;
-    private final UserRepositoryImpl userRepository;
-    private final UserMapper userMapper;
+    private final ItemRepository itemRepository;
+    private final UserRepository userRepository;
+    private final CommentRepository commentRepository;
+    private final BookingRepository bookingRepository;
     private final ItemMapper itemMapper;
+    private final CommentMapper commentMapper;
 
     @Override
-    public ItemDto createItem(ItemCreateDto itemDto, long userId) {
-        User user = userRepository.getUserById(userId)
-                .orElseThrow(() -> new NotFoundUserException(userId));
-        Item savedItem = itemRepository.createItem(itemMapper.toModel(itemDto, userId));
-        return itemMapper.toDto(savedItem, userMapper.toDto(user));
+    public ItemDto createItem(ItemCreateDto itemDto, long ownerId) {
+        User owner = userRepository.findById(ownerId)
+                .orElseThrow(() -> new NotFoundUserException(ownerId));
+        Item savedItem = itemRepository.save(itemMapper.toModel(itemDto, owner));
+        return itemMapper.toDto(savedItem, owner);
     }
 
     @Override
     public ItemDto updateItem(ItemUpdateDto itemDto, long itemId) {
-        Item item = itemRepository.getItemById(itemId)
+        Item item = itemRepository.findById(itemId)
                 .orElseThrow(() -> new NotFoundItemException(itemId));
-        if (!itemDto.getOwner().equals(item.getOwner())) {
-            throw new ForbiddenOperationException(itemDto.getOwner(), itemId);
+        long ownerId = item.getOwner().getId();
+        if (!itemDto.getOwner().equals(ownerId)) {
+            throw new ForbiddenOperationException(itemDto.getOwner());
         }
         if (itemDto.getName() != null) {
             item.setName(itemDto.getName());
@@ -48,51 +61,101 @@ public class ItemServiceImpl implements ItemService {
         if (itemDto.getAvailable() != null) {
             item.setAvailable(itemDto.getAvailable());
         }
-        long userId = item.getOwner();
-        User user = userRepository.getUserById(userId).orElseThrow(() -> new NotFoundUserException(userId));
+        User owner = userRepository.findById(ownerId)
+                .orElseThrow(() -> new NotFoundUserException(ownerId));
 
-        Item savedItem = itemRepository.updateItem(item);
-        return itemMapper.toDto(savedItem, userMapper.toDto(user));
+        Item savedItem = itemRepository.save(item);
+        return itemMapper.toDto(savedItem, owner);
     }
 
     @Override
     public ItemDto getItemById(long itemId) {
-        Item item = itemRepository.getItemById(itemId)
+        Item item = itemRepository.findById(itemId)
                 .orElseThrow(() -> new NotFoundItemException(itemId));
-        User user = userRepository.getUserById(item.getOwner())
-                .orElseThrow(() -> new NotFoundUserException(item.getOwner()));
 
-        return itemMapper.toDto(item, userMapper.toDto(user));
+        long ownerId = item.getOwner().getId();
+        User owner = userRepository.findById(ownerId)
+                .orElseThrow(() -> new NotFoundUserException(ownerId));
+        List<CommentDto> comments = getCommentsByItemId(itemId);
+        return itemMapper.toDtoWithComments(item, owner, comments);
     }
 
     @Override
-    public List<ItemDto> getItemsByUser(long userId) {
-        User user = userRepository.getUserById(userId)
-                .orElseThrow(() -> new NotFoundUserException(userId));
-        List<Item> items = itemRepository.getItemsByUser(userId);
+    public List<ItemDto> getItemsByUser(long ownerId) {
+        User owner = userRepository.findById(ownerId)
+                .orElseThrow(() -> new NotFoundUserException(ownerId));
+
+        List<Item> items = itemRepository.findByOwner(owner);
         return items.stream()
-                .map(item -> itemMapper.toDto(item, userMapper.toDto(user)))
-                .collect(Collectors.toList());
+                .map(item -> {
+                    List<CommentDto> comments = getCommentsByItemId(item.getId());
+                    ItemDto itemDto = itemMapper.toDtoWithComments(item, owner, comments);
+
+                    LocalDateTime now = LocalDateTime.now();
+                    Optional<Booking> lastBookingOpt = bookingRepository.findLastBooking(item.getId(), now);
+                    lastBookingOpt.ifPresent(
+                            lastBooking -> itemDto.setLastBooking(
+                                    new ItemDto.BookingDto(lastBooking.getId(),
+                                            lastBooking.getBooker().getId())));
+
+                    Optional<Booking> nextBookingOpt = bookingRepository.findNextBooking(item.getId(), now);
+                    nextBookingOpt.ifPresent(
+                            nextBooking -> itemDto.setNextBooking(
+                                    new ItemDto.BookingDto(nextBooking.getId(),
+                                            nextBooking.getBooker().getId()))
+                    );
+                    return itemDto;
+                })
+                .toList();
     }
 
 
     @Override
     public List<ItemDto> searchItem(String text) {
+        if (text == null || text.isEmpty()) {
+            return new ArrayList<>();
+        }
         List<Item> items = itemRepository.searchItem(text);
         return items.stream()
                 .map(item -> {
-                    User user = userRepository.getUserById(item.getOwner())
-                            .orElseThrow(() -> new NotFoundUserException(item.getOwner()));
-                    return itemMapper.toDto(item, userMapper.toDto(user));
+                    long ownerId = item.getOwner().getId();
+                    User owner = userRepository.findById(ownerId)
+                            .orElseThrow(() -> new NotFoundUserException(ownerId));
+                    return itemMapper.toDto(item, owner);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public void deleteItem(long itemId) {
-        itemRepository.getItemById(itemId)
+    public void deleteItem(Long itemId) {
+        itemRepository.findById(itemId)
                 .orElseThrow(() -> new NotFoundItemException(itemId));
-        itemRepository.deleteItem(itemId);
+        itemRepository.deleteById(itemId);
+    }
+
+    @Override
+    public CommentDto addComment(CommentCreateDto commentCreateDto, long itemId, long authorId) {
+        User author = userRepository.findById(authorId)
+                .orElseThrow(() -> new NotFoundUserException(authorId));
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundItemException(itemId));
+
+        Booking booking = bookingRepository.findByItem_IdAndBooker_Id(itemId, authorId)
+                .orElseThrow(() -> new ForbiddenOperationException(authorId));
+
+        if (!booking.getEnd().isBefore(LocalDateTime.now())
+                || !booking.getStatus().equals(BookingStatus.APPROVED)) {
+            throw new ValidationException();
+        }
+        Comment comment = commentRepository.save(commentMapper.toModel(commentCreateDto, item, author));
+        return commentMapper.toDto(comment, author);
+    }
+
+    private List<CommentDto> getCommentsByItemId(long itemId) {
+        return commentRepository.findByItem_Id(itemId)
+                .stream()
+                .map(comment -> commentMapper.toDto(comment, comment.getAuthor()))
+                .toList();
     }
 
 }
